responsive fixes for Value section accordion and text scaling on tablets and mobiles.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .h-wrapper {
   color: white;
+  z-index: 99;
 }
 
 .h-container {
@@ -26,6 +27,7 @@
     display: block;
   }
   .h-menu {
+    z-index: 99;
     color: var(--black);
     position: absolute;
     top: 3rem;
