--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,10 +2,11 @@
   color: white;
   position: relative;
   padding-bottom: 2rem;
+  z-index: 1;
 }
 
 .hero-container {
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-end;
 }
 
@@ -105,6 +106,6 @@
   }
   .stat>:nth-child(2)
   {
-    font-size: 0.8rem;
+    font-size: 0.8rem; 
   }
 }
