--- a/src/components/Residencies/Residencies.css
+++ b/src/components/Residencies/Residencies.css
@@ -84,4 +84,13 @@
 
 }
 
+@media (max-width: 640px) {
+    .r-head{
+        align-items: center;
+    }
+    .r-buttons{
+        position: initial;
+
+    }
+}
  
