--- a/src/components/Value/Value.css
+++ b/src/components/Value/Value.css
@@ -74,3 +74,16 @@
   padding: 0 1rem 1rem 1rem;
   line-height: 1.6;
 }
+
+@media (max-width: 1024px) {
+  .v-container{
+    flex-direction: column;
+  }
+
+  @media (max-width:768px) {
+    .accordionButton .primaryText{
+      font-size: 0.8rem;
+      
+    }
+  }
+}
